<resources>
    <string name="app_name">R3PI Test</string>
    <string name="action_settings">Settings</string>
    <string name="action_checkout">Checkout</string>
    <string name="action_search">Search</string>
    <string name="items">Items</string>
    <string name="name">Name</string>
    <string name="price_example">999.99£</string>
    <string name="item_description_with_unit">%1$s %2$s£ per %3$s</string>
    <string name="item_description">%1$s %2$s£ per unit</string>
    <string name="item_add_total"><![CDATA[Total <b>%1$s£</b>]]></string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="money">%1$s£</string>
    <string name="empty_basket">Click on \"+\" button to add items</string>
    <string name="per_symbol">×</string>
    <string name="equal_symbol">=</string>
    <string name="total">Total</string>
    <string name="unit">Unit</string>
    <string name="item_added">%1$d %2$s added</string>
    <string name="basket_item_deleted">%1$s deleted</string>
    <string name="undo">UNDO</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_currency">Change currency</string>
    <string name="checkout_total"><![CDATA[Total <b>%1$s %2$s</b>]]></string>
    <string name="updating_currency">Updating exchanges quotes</string>
    <string name="currency_update_to">Exchanges quotes updated %1$s</string>
    <string name="network_error_exchanges">Network error. Exchanges quotes not available.</string>
    <string name="no_connection">No Data Connection available</string>
</resources>
