<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp"
    tools:context="net.dragora.bjsstest.ui.checkout.CheckoutDialogFragment">


    <TextView
        android:id="@+id/priceTotal"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        tools:text="@string/price_example" />


    <Button
        android:id="@+id/changeCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceTotal"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/change_currency"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeCurrency"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/updateExchanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_refresh_black_24dp"
            android:tint="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/updating_currency" />
    </LinearLayout>


</RelativeLayout>
